2007-09-03  Anatoly Sokolov <aesok@post.ru>

	PR target/28902
 	* config/avr/avr.h (TARGET_VTABLE_ENTRY_ALIGN): Define.

2007-09-01  Nick Clifton  <nickc@redhat.com>

	* COPYING3, COPYING3.LIB: New files.
	* tree-ssa-operands.h: Change copyright header to refer to version
	3 of the GNU General Public License and to point readers at the
	COPYING3 file and the FSF's license web page.
	* tree-vrp.c, regrename.c, attribs.c, loop-unswitch.c, sched-ebb.c,
	tree-loop-linear.c, dwarf2asm.c, tree-into-ssa.c, dwarf2asm.h,
	tree-ssa-loop-im.c, sbitmap.c, targhooks.c, tree-dump.c,
	tree-complex.c, sbitmap.h, targhooks.h, tree-dump.h, see.c,
	machmode.h, hooks.c, hooks.h, genrecog.c, tree-ssa-threadupdate.c,
	gen-protos.c, flags.h, rtlhooks.c, gencheck.c,
	tree-ssa-loop-niter.c, opts-common.c, tree-pretty-print.c, tracer.c,
	gengtype.c, mkconfig.sh, gengtype.h, tree-ssa-loop-unswitch.c,
	cgraph.c, c-lex.c, cgraph.h, libfuncs.h, cfgloopmanip.c,
	rtl-error.c, optabs.c, postreload-gcse.c, tree-ssa-loop-manip.c,
	optabs.h, genmddeps.c, defaults.h, postreload.c, value-prof.c,
	tree-ssa-loop-ch.c, tree-tailcall.c, gengenrtl.c, value-prof.h,
	genopinit.c, tree.c, tree.h, reload.c, tree-pass.h, ipa-cp.c,
	reload.h, bitmap.c, bitmap.h, tree-scalar-evolution.c,
	c-config-lang.in, tree-scalar-evolution.h, target.h, cppspec.c,
	rtlanal.c, ddg.c, lambda-mat.c, mips-tdump.c, ddg.h,tree-phinodes.c,
	mips-tfile.c, pointer-set.c, pointer-set.h, diagnostic.c, final.c,
	diagnostic.h, builtins.c, genoutput.c, gcc.c, lists.c, gcc.h,
	cfghooks.c, input.h, gensupport.c, fold-const.c, cfghooks.h,
	insn-notes.def, gensupport.h, builtin-attrs.def, sync-builtins.def,
	params.c, cfgloopanal.c, params.h, omp-low.c, tree-ssa-dse.c,
	gcov.c, cfg.c, genextract.c, ipa-reference.c, genautomata.c,
	tree-ssa-uncprop.c, toplev.c, tree-gimple.c, ipa-reference.h,
	vmsdbgout.c, errors.c, toplev.h, reorg.c, tree-gimple.h,
	tree-chrec.c, pretty-print.c, errors.h, real.c, tree-chrec.h,